--- a/package.json
+++ b/package.json
@@ -4,22 +4,22 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "build": "next build",
-    "check": "next lint && tsc --noEmit",
+    "dev": "next dev --turbo -p 4000",
+    "dev:check": "next lint && tsc --noEmit",
+    "dev:typecheck": "tsc --noEmit",
+    "dev:format:write": "prettier --write \"**/*.{ts,tsx,js,jsx,mdx}\" --cache",
+    "dev:format:check": "prettier --check \"**/*.{ts,tsx,js,jsx,mdx}\" --cache",
     "db:generate": "drizzle-kit generate",
     "db:migrate": "drizzle-kit migrate",
     "db:push": "drizzle-kit push",
     "db:studio": "drizzle-kit studio",
-    "dev": "next dev --turbo -p 4000",
-    "lint": "next lint",
-    "lint:fix": "next lint --fix",
-    "preview": "next build && next start",
-    "start": "next start",
-    "typecheck": "tsc --noEmit",
-    "format:write": "prettier --write \"**/*.{ts,tsx,js,jsx,mdx}\" --cache",
-    "format:check": "prettier --check \"**/*.{ts,tsx,js,jsx,mdx}\" --cache",
-    "prepare": "husky",
-    "precommit": "npm run typecheck && npm run format:write && npm run lint:fix"
+    "next:lint": "next lint",
+    "next:lint:fix": "next lint --fix",
+    "next:build": "next build",
+    "next:preview": "next build && next start",
+    "next:start": "next start",
+    "precommit": "npm run dev:typecheck && npm run dev:format:write && npm run next:lint:fix",
+    "prepare": "husky"
   },
   "dependencies": {
     "@radix-ui/react-dialog": "^1.1.2",
