--- a/.env.example
+++ b/.env.example
@@ -10,7 +10,7 @@
 # should be updated accordingly.
 
 # Drizzle
-DATABASE_URL="postgresql://postgres:password@localhost:5432/sms-sender"
+DATABASE_URL="postgresql://postgres:password@localhost:5432/sms_db"
 
 # Example:
 # SERVERVAR="foo"
