--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@t3-oss/env-nextjs": "^0.10.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
     "dotenv": "^16.4.5",
     "drizzle-orm": "^0.36.0",
     "geist": "^1.3.0",
